app/less/classes/nav.less
@nav-border-radius: @nav-height / 3;

.admin {
    .nav-section {

        .progress-bar-mixin(@song-total-colour, @song-filled-colour);

        .selected {
            .progress-bar-mixin(@played-total-colour, @played-filled-colour);

            a.text-cell {
                color: @song-link-colour;

                &:hover {
                    color: @song-hover-colour;
                }

                &:active {
                    color: @song-active-colour;
                }
            }
        }

        .primary-row {
            line-height: 1em;
        }
    }
}

.live {
    .nav-section {
        position: absolute;
        width: 100%;
        overflow: visible;
    }
}

// All containers.
.live-nav-block, .nav-book, .nav-toggle-book {
    display: flex;
}

.live-nav-block {
    height: 100%;
}

.books-block {
    position: relative;
    width: 100%;

    // TODO: Consider adjusting this animatable height for tablet and mini?
    height: @nav-height * 3; // Just an arbitrary value that's large enough.
}

.book-column-block, .book-column, .nav-book, .nav-toggle-book {
    position: absolute;
    height: 100%;
}

.book-column-block {
    height: @book-height;
}

.column-2 {
    margin-right: @nav-last-title-margin;
}

.tablet-width, .mini-width {
    .column-2 {
        margin-right: 0;
    }
}

.static-icon {
    .nav-button {
        width: @app-icon-diameter;
    }
}

.nav-book, .nav-toggle-book {
    padding: 0 @nav-book-padding;

    &.nav-book {
        min-width: @app-icon-diameter;
        border-radius: @nav-border-radius @nav-border-radius 0 0;
        background-color: #48d;
    }

    &.nav-toggle-book {
        border-radius: 0 @nav-border-radius 0 0;

        transition: left 0.2s;
        left: 0;

        background-color: purple;
    }
}

.nav-toggle-block {
    position: relative;
    overflow: hidden;
}

.nav-button {
    position: relative;
}

.nav-icon-block {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
}

.nav-icon {
    background-color: #dd8;
}

.nav-toggle-icon {
    background-color: #8dd;
}

.selected {
    .nav-icon {
        background-color: orange;
    }
}

.nav-title-block {
    position: absolute;
    left: 25%;
    width: 0;

    // FIXME: Make transform vendor friendly.
    transform: rotate(315deg);
    transform-origin: left top;
}

.is-desktop {

    .books-block {
        bottom: @nav-height * 2;
    }

    .book-column-block {
        transition: bottom 0.2s;
        bottom: -@book-height;
    }

    .nav-expanded {

        .book-column-block {
            bottom: 0;
        }

        .column-shown {
            // Show title if shown in desktop.
            .nav-title {
                transform: scale(1);
            }
        }
    }
}

.tablet-width, .mini-width {

    .live-nav-block {
        flex-direction: row-reverse;
    }

    .books-block {
        top: 0;
    }

    .book-column-block {
        transition: top 0.2s;
        top: -@book-height;
    }

    .nav-book {
        border-radius: 0 0 @nav-border-radius @nav-border-radius;
    }

    .nav-toggle-book {
        border-radius: 0 0 0 @nav-border-radius;
    }

    .nav-title-block {
        transform: rotate(45deg);
        transform-origin: left bottom;
        top: 50%;
    }

    .nav-expanded {
        .book-column-block {
            top: 0;
        }
    }
}

.nav-title {
    white-space: nowrap;
    transition: transform 0.2s;

    transform: scale(0);
}

.nav-expanded {
    .column-shown {
        .nav-title {
            transform: scale(1);
        }
    }
}

// Static margins after icons begin shrinking.
.shrink-icon {
    .column-shown {
        &.column-1 {
            .nav-button {
                &:not(:last-child) {
                    margin-right: 1px;
                }
            }
        }

        &.column-2 {
            .nav-button {
                &:not(:last-child) {
                    margin-left: 1px;
                }
            }
        }
    }

    .nav-toggle-block {
        margin-right: 3px;
    }
}

.tablet-width, .mini-width {
    .shrink-icon {
        .nav-toggle-block {
            margin-left: 3px;
            margin-right: 0;
        }
    }
}

// TODO: Begin animations.
.column-1 {
    .book-column {
        transition: left 0.2s;
    }

    .nav-book {
        &.songs {
            left: 50px;
            transition: left 0.2s;
        }
    }
}

.column-2 {
    right: 0;

    .book-column {
        right: 0;
        transition: right 0.2s;
    }

    .nav-book {
        &.logue {
            right: 0;
        }

        &.songs {
            right: 50px;
            transition: right 0.2s;
            flex-direction: row-reverse;

            .nav-icon-block {
                right: 0;
            }
        }

        &.toggle {
            right: 0;
        }
    }
}

.single-book-column {
    .nav-button {
        transition: width 0.2s;
    }
}

.column-hidden {

    &.column-1 {
        .nav-book.songs {
            left: 0;
        }
    }

    &.column-2 {
        .nav-book.logue {
            right: 0;
        }

        .nav-book.songs {
            right: 0;
        }
    }

    .nav-button {
        width: 0;
    }
}

// End animations.

